@@ -256,6 +256,9 @@ Unreleased changes (1.0-dev)
 93. NUTCH-634 - Upgrade Nutch to Hadoop 0.17.1 (Michael Gottesman, Lincoln
     Ritter, ab)
 
+94. NUTCH-641 - IndexSorter inorrectly copies stored fields (ab)
+
+
 Release 0.9 - 2007-04-02
 
  1. Changed log4j confiquration to log to stdout on commandline
